Libreria RichFaces UI 3.3.4:
Aggiornato codice del progetto maven-javascript-plugin per la generazione del javascript utilizzando le librerie di jquery 3.6.x e jquery-ui 1.13.x.
E' stato aggioranto il codice java all'ultima versione disponibile per i progetti:

- https://github.com/yui/yuicompressor
- https://github.com/davidB/yuicompressor-maven-plugin

Utilizzati dalla libreria originale ma non capaci di gestire le versioni piu' aggiorante di JS.